--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ami shikhi
-        
-    </h1>
+    <h1>ami shikhi</h1>
+    <h2>ami nasi</h2>
+    <h3>ami dekhi</h3>
 </body>
 </html>
