--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>antazi</title>
+    <style>
+        .hoyna {
+            color: blue;
+        }
+        h1 {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        h2 {
+            color: brown;
+        }
+    </style>
+
 </head>
 <body>
-    <h1>ami shikhi</h1>
+    <h1>ami shikhi</h1>   
     <h2>ami nasi</h2>
-    <h3>ami dekhi o aki</h3>
+    <h3>ami dekhi o aki</h3>  
+    <div class="hoyna">  
+    <p>
+        pahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alupahar nodi alu
+    </p>
+    </div> 
 </body>
 </html>
